<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps</string>
    <string name="app_1">Popular Movies</string>
    <string name="app_2">Stock Hawk</string>
    <string name="app_3">Build it Bigger</string>
    <string name="app_4">Make Your App Material</string>
    <string name="app_5">Go Ubiquitous</string>
    <string name="app_6">Capstone</string>
</resources>
