<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.chaiy.nanodegreeapps.MyAppsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/title" />

        <Button
            android:id="@+id/app1"
            style="@style/button_style"
            android:text="@string/app_1" />

        <Button
            android:id="@+id/app2"
            style="@style/button_style"
            android:text="@string/app_2" />

        <Button
            android:id="@+id/app3"
            style="@style/button_style"
            android:text="@string/app_3" />

        <Button
            android:id="@+id/app4"
            style="@style/button_style"
            android:text="@string/app_4" />

        <Button
            android:id="@+id/app5"
            style="@style/button_style"
            android:text="@string/app_5" />

        <Button
            android:id="@+id/app6"
            style="@style/button_style"
            android:text="@string/app_6" />
    </LinearLayout>


</LinearLayout>
